<resources>
    <!--general begin-->
    <string name="app_name">EzServiceTest</string>
    <string name="scan_header_name">Scan settings</string>
    <string name="general_header_name">General settings</string>
    <string name="reboot_device_title">Reboot device</string>
    <string name="reboot_device_summary"></string>
    <string name="power_off_device_title">Power off device</string>
    <string name="power_off_device_summary"></string>
    <string name="serial_number_title">Serial number</string>
    <string name="serial_number_summary_default"></string>
    <string name="set_sys_time_title">Set system time</string>
    <string name="set_sys_time_summary"></string>
    <string name="set_time_zone_title">Set Time Zone</string>
    <string name="set_time_zone_summary">Set to America/Tijuana</string>
    <string name="battery_info_title">Battery info</string>
    <string name="battery_info_summary">Get Battery SN and Cycle Count(Old Battery can\'t get SN)</string>
    <string name="set_status_bar_title">Status bar</string>
    <string name="set_status_bar_summary">Enable/Disable</string>
    <string name="enable_home_key_title">Home key</string>
    <string name="enable_home_key_summary">Enable/Disable</string>
    <string name="enable_app_switch_key_title">App switch key</string>
    <string name="enable_app_switch_key_summary">Enable/Disable</string>
    <string name="back_switch_key_title">Back key</string>
    <string name="back_switch_key_summary">Enable/Disable</string>
    <string name="navigationbar_switch_key_title">Virtual Navigation bar</string>
    <string name="navigationbar_switch_key_summary">Unhide/Hide</string>
    <string name="wifi_rssi_switch_key_title">Wifi rssi</string>
    <string name="wifi_rssi__switch_key_summary">Unhide/Hide</string>
    <string name="battery_level_switch_key_title">Battery percentage</string>
    <string name="battery_level__switch_key_summary">Unhide/Hide</string>
    <string name="enable_usb_debug_mode_title">Usb debug mode</string>
    <string name="enable_usb_debug_mode_summary">Enable/Disable</string>

    <string name="restrict_cellular_data_title">Cellular data Restriction</string>
    <string name="restrict_cellular_data_summary">On/Off</string>
    <string name="restrict_wifi_title">Wifi Restriction</string>
    <string name="restrict_wifi_summary">On/Off</string>
    <string name="restrict_bluetooth_title">Bluetooth Restriction</string>
    <string name="restrict_bluetooth_summary">On/Off</string>
    <string name="restrict_usb_mtp_title">MTP Restriction</string>
    <string name="restrict_usb_mtp_summary">On/Off</string>

    <string name="replace_boot_animation_title">Replace bootanimation</string>
    <string name="replace_boot_animation_summary"></string>
    <string name="enable_custom_boot_animtion_title">Custom bootanimation</string>
    <string name="enable_custom_boot_animtion_summary">Enable/Disable</string>
    <string name="runtime_permissions_set_key_title">Grant/Revoke runtime permissions</string>
    <string name="runtime_permissions_set_key_summary"></string>
    <string name="default_launcher_set_key_title">Set default launcher</string>
    <string name="default_launcher_set_key_summary"></string>
    <string name="enable_never_sleep_title">Never sleep</string>
    <string name="enable_never_sleep_summary">On/Off</string>
    <string name="enable_nosip_title">Nosip</string>
    <string name="enable_nosip_summary">On/Off</string>
    <string name="enable_usb_mtp_title">Default usb mode---MTP</string>
    <string name="enable_usb_mtp_summary">On/Off</string>
    <string name="enable_media_scan_title">Media scan</string>
    <string name="enable_media_scan_summary">Whether do media scan when swithing to mtp mode</string>
    <string name="enable_portal_detection_title">Wifi portal detection</string>
    <string name="enable_portal_detection_summary">On/Off</string>
    <string name="firmware_update_title">Firmware update</string>
    <string name="firmware_update_summary"></string>
    <string name="silent_install_title">Silent install</string>
    <string name="silent_install_summary">Choose apk file</string>
    <string name="silent_uninstall_title">Silent uninstall</string>
    <string name="silent_uninstall_summary">Input package name,such as com.xxx.xxx</string>
    <string name="whitelist_enable_title">Whitelist enable</string>
    <string name="whitelist_enable_summary"></string>
    <string name="whitelist_title">Whitelist</string>
    <string name="whitelist_summary">Default:EzReceiver,EzServiceTest</string>
    <string name="blacklist_enable_title">Blacklist enable</string>
    <string name="blacklist_enable_summary"></string>
    <string name="blacklist_title">Blacklist</string>
    <string name="blacklist_summary">Default:Camera,Contact,Music</string>
    <string name="while_black_list_disable_title">WhileBlack list disable</string>
    <string name="while_black_list_disable_summary">Disable white/blacklisting function, and restore application status.</string>
    <!--general end-->

    <!--scan begin-->
    <string name="scan_result_action_title">Scan result broadcast action</string>
    <string name="scan_result_action_summary"></string>
    <string name="scan_result_key_title">Scan result broadcast key</string>
    <string name="scan_result_key_summary"></string>
    <string name="scan_btn_keydown_title">Scan button key down broadcast</string>
    <string name="scan_btn_keydown_summary">Enable/Disable</string>
    <string name="scan_btn_keyup_title">Scan button key up broadcast</string>
    <string name="scan_btn_keyup_summary">Enable/Disable</string>
    <string name="scan_settings_test_title">Scan Settings Test</string>
    <string name="scan_settings_test_summary"></string>
    <!--scan end-->

    <!--scan others begin-->
    <string name="scan_key_default_text">N/A</string>
    <string name="confirm_btn_text">Modify</string>
    <!--scan others end-->

    <!--general others begin-->
    <string name="tvLabel_text">AppLable:</string>
    <string name="tvName_text">PkgName:</string>
    <string name="pkgName_tv_hint">Choose apk item to set package name</string>
    <string name="grant_btn_text">Grant all runtime permissions</string>
    <string name="revoke_btn_text">Revoke all runtime permissions</string>

    <string name="download_introduction">Input URL or Scan QR code to parse the URL.</string>
    <string name="download_btn_text">Download</string>
    <string name="downloading_text">Downloading...</string>

    <!--general others end-->
</resources>
