<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="reboot_device"
        android:title="@string/reboot_device_title"
        android:summary="@string/reboot_device_summary"
        />
    <Preference
        android:key="power_off_device"
        android:title="@string/power_off_device_title"
        android:summary="@string/power_off_device_summary"
        />
    <Preference
        android:key="serial_number"
        android:title="@string/serial_number_title"
        android:summary="@string/serial_number_summary_default"
        />
    <Preference
        android:key="set_sys_time"
        android:title="@string/set_sys_time_title"
        android:summary="@string/set_sys_time_summary"
        />
    <Preference
        android:key="set_time_zone"
        android:title="@string/set_time_zone_title"
        android:summary="@string/set_time_zone_summary"
        />
    <Preference
        android:key="battery_info"
        android:title="@string/battery_info_title"
        android:summary="@string/battery_info_summary"
        />
    <SwitchPreference
        android:key="set_status_bar"
        android:title="@string/set_status_bar_title"
        android:summary="@string/set_status_bar_summary"
        />
    <SwitchPreference
        android:key="enable_home"
        android:title="@string/enable_home_key_title"
        android:summary="@string/enable_home_key_summary"
        />
    <SwitchPreference
        android:key="enable_app_switch"
        android:title="@string/enable_app_switch_key_title"
        android:summary="@string/enable_app_switch_key_summary"
        />
    <SwitchPreference
        android:key="back_switch"
        android:title="@string/back_switch_key_title"
        android:summary="@string/back_switch_key_summary"
        />
    <SwitchPreference
        android:key="navigationbar_switch"
        android:summary="@string/navigationbar_switch_key_summary"
        android:title="@string/navigationbar_switch_key_title" />
    <SwitchPreference
        android:key="wifi_rssi"
        android:summary="@string/wifi_rssi__switch_key_summary"
        android:title="@string/wifi_rssi_switch_key_title" />
    <SwitchPreference
        android:key="battery_level"
        android:summary="@string/battery_level__switch_key_summary"
        android:title="@string/battery_level_switch_key_title" />
    <SwitchPreference
        android:key="enable_usb_debug_mode"
        android:title="@string/enable_usb_debug_mode_title"
        android:summary="@string/enable_usb_debug_mode_summary"
        />
    <SwitchPreference
        android:key="restrict_cellular_data"
        android:title="@string/restrict_cellular_data_title"
        android:summary="@string/restrict_cellular_data_summary"
        />
    <SwitchPreference
        android:key="restrict_wifi"
        android:title="@string/restrict_wifi_title"
        android:summary="@string/restrict_wifi_summary"
        />
    <SwitchPreference
        android:key="restrict_bluetooth"
        android:title="@string/restrict_bluetooth_title"
        android:summary="@string/restrict_bluetooth_summary"
        />
    <SwitchPreference
        android:key="restrict_usb_mtp"
        android:title="@string/restrict_usb_mtp_title"
        android:summary="@string/restrict_usb_mtp_summary"
        />
    <Preference
        android:key="replace_boot_animation"
        android:title="@string/replace_boot_animation_title"
        android:summary="@string/replace_boot_animation_summary"
        />
    <SwitchPreference
        android:key="enable_custom_boot_animtion"
        android:title="@string/enable_custom_boot_animtion_title"
        android:summary="@string/enable_custom_boot_animtion_summary"
        />
    <SwitchPreference
        android:key="enable_never_sleep"
        android:title="@string/enable_never_sleep_title"
        android:summary="@string/enable_never_sleep_summary"
        />
    <SwitchPreference
        android:key="enable_nosip"
        android:title="@string/enable_nosip_title"
        android:summary="@string/enable_nosip_summary"
        />

    <SwitchPreference
        android:key="enable_usb_mtp"
        android:title="@string/enable_usb_mtp_title"
        android:summary="@string/enable_usb_mtp_summary"
        />
    <SwitchPreference
        android:key="enable_media_scan"
        android:title="@string/enable_media_scan_title"
        android:summary="@string/enable_media_scan_summary"
        />
    <SwitchPreference
        android:key="enable_portal_detection"
        android:title="@string/enable_portal_detection_title"
        android:summary="@string/enable_portal_detection_summary"
        />
    <Preference
        android:key="runtime_permissions_set_key"
        android:title="@string/runtime_permissions_set_key_title"
        android:summary="@string/runtime_permissions_set_key_summary"
        />
    <ListPreference
        android:key="default_launcher_set_key"
        android:title="@string/default_launcher_set_key_title"
        android:summary="@string/default_launcher_set_key_summary"
        />
    <Preference
        android:key="firmware_update"
        android:title="@string/firmware_update_title"
        android:summary="@string/firmware_update_summary"
        />
    <Preference
        android:key="silent_install"
        android:title="@string/silent_install_title"
        android:summary="@string/silent_install_summary"
        />
    <EditTextPreference
        android:key="silent_uninstall"
        android:title="@string/silent_uninstall_title"
        android:summary="@string/silent_uninstall_summary"
        />
    <SwitchPreference
        android:key="whitelist_enable"
        android:title="@string/whitelist_enable_title"
        android:summary="@string/whitelist_enable_summary"
        />
    <Preference
        android:key="whitelist"
        android:title="@string/whitelist_title"
        android:summary="@string/whitelist_summary"
        />
    <SwitchPreference
        android:key="blacklist_enable"
        android:title="@string/blacklist_enable_title"
        android:summary="@string/blacklist_enable_summary"
        />
    <Preference
        android:key="blacklist"
        android:title="@string/blacklist_title"
        android:summary="@string/blacklist_summary"
        />
    <Preference
        android:key="while_black_list_disable"
        android:title="@string/while_black_list_disable_title"
        android:summary="@string/while_black_list_disable_summary"
        />
</PreferenceScreen>