<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:id="@+id/pkgName_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pkgName_tv_hint"
            android:textColorHint="#ff0000"
            android:textSize="20dp"
            android:textColor="#ff0000"/>
        <Button
            android:id="@+id/grant_btn"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/grant_btn_text"/>
        <Button
            android:id="@+id/revoke_btn"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/revoke_btn_text"/>
        <ListView
            android:id="@+id/listviewApp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
</LinearLayout>

</RelativeLayout>